--- a/WebBooks/catalog/templates/index.html
+++ b/WebBooks/catalog/templates/index.html
@@ -16,4 +16,16 @@
  <li><strong>Количество авторов книг:
  </strong> {{ num_authors }}</li>
  </ul>
+ <p>База данных сайта Мир книг содержит следующее количество
+    записей:</p>
+    <ul>
+    <li><strong>Количество книг:</strong> {{ num_books }}</li>
+    <li><strong>Количество экземпляров книг:</strong>
+    {{ num_instances }}</li>
+    <li><strong>Количество экземпляров книг в заказе:</strong>
+    {{ num_instances_available }}</li>
+    <li><strong>Количество авторов книг:</strong>
+    {{ num_authors }}</li>
+    </ul>
+   <p>Количество посещений данной страницы - {{ num_visits }}</p>
 {% endblock %}
