--- a/WebBooks/catalog/templates/catalog/book_list.html
+++ b/WebBooks/catalog/templates/catalog/book_list.html
@@ -5,9 +5,10 @@
  <ul>
  {% for book in book_list %}
  <li>
- <a href="{{book.get_absolute_url}}">
- {{ book.title }}</a>
+ <a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
  ({{book.genre}})
+ <a href="/book/update/{{book.id}}">Изменить</a> ,
+ <a href="/book/delete/{{book.id}}">Удалить</a> 
  </li>
  {% endfor %}
  </ul>
